Improving image service implementation